gcp/gcp-instance.tf
data "google_compute_image" "ph-gcp-image" {
  project = var.gcp_image_project
  name    = var.gcp_image_name
}

resource "google_compute_address" "ph-public-ip" {
  name         = "${var.ph_prefix}-public-ip"
  project      = google_project.ph-project.project_id
  region       = var.gcp_region
  address_type = "EXTERNAL"
  network_tier = "STANDARD"
  depends_on   = [google_project_service.ph-project-services]
}

locals {
  ssh_key_formatted = length(split(" ", var.ssh_key)) == 3 ? var.ssh_key : "${var.ssh_key} ubuntu"
}

resource "google_compute_instance" "ph-instance" {
  name         = "${var.ph_prefix}-instance"
  zone         = "${var.gcp_region}-${var.gcp_zone}"
  machine_type = var.gcp_machine_type
  project      = google_project.ph-project.project_id
  metadata = {
    ssh-keys       = "${var.ssh_user}:${local.ssh_key_formatted}"
    startup-script = "# Disable systemd resolve\nDNS_SERVER='169.254.169.254'\nDNS_SEARCH=$(grep '^search ' /etc/resolv.conf)\nsystemctl disable systemd-resolved\nsystemctl stop systemd-resolved\nrm -f /etc/resolv.conf\ntee /etc/resolv.conf << EOM\nnameserver $DNS_SERVER\noptions edns0\n$DNS_SEARCH\nEOM\n\ntee /etc/systemd/system/cloudblock-ansible-state.service << EOM\n[Unit]\nDescription=cloudblock-ansible-state\nAfter=network.target\nStartLimitInterval=600\nStartLimitBurst=3\n\n[Service]\nExe [...]
  }
  boot_disk {
    kms_key_self_link = google_kms_crypto_key.ph-key-compute.id
    initialize_params {
      image = data.google_compute_image.ph-gcp-image.self_link
      type  = "pd-standard"
    }
  }
  network_interface {
    subnetwork = google_compute_subnetwork.ph-subnetwork.self_link
    network_ip = var.gcp_instanceip
    access_config {
      nat_ip       = google_compute_address.ph-public-ip.address
      network_tier = "STANDARD"
    }
  }
  service_account {
    email  = google_service_account.ph-service-account.email
    scopes = ["cloud-platform", "storage-rw"]
  }
  allow_stopping_for_update = true
  depends_on                = [google_kms_crypto_key_iam_binding.ph-key-compute-binding, google_service_account_iam_policy.ph-account-service-iam-policy, google_kms_crypto_key_iam_binding.ph-key-secret-binding, google_storage_bucket.ph-bucket]
}
